--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-5xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold">Your Name</h1>
+      <h1 class="text-xl font-bold">Kuwsh Okai</h1>
       <nav class="space-x-4">
         <a href="#projects" class="hover:text-blue-500">Projects</a>
         <a href="#contact" class="hover:text-blue-500">Contact</a>
@@ -20,8 +20,8 @@
 
   <main class="max-w-5xl mx-auto px-4 py-16">
     <section class="text-center">
-      <h2 class="text-4xl font-bold mb-4">Hello, I'm [Your Name]</h2>
-      <p class="text-lg text-gray-600 mb-8">A [Your Role] passionate about building things for the web.</p>
+      <h2 class="text-4xl font-bold mb-4">Kuwsh Okai</h2>
+      <p class="text-lg text-gray-600 mb-8"></p>
       <a href="#projects" class="inline-block bg-blue-500 text-white px-6 py-2 rounded-xl shadow hover:bg-blue-600 transition">View My Work</a>
     </section>
 
