--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name - Portfolio</title>
+  <title>Kuwsh Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -46,7 +46,7 @@
   </main>
 
   <footer class="bg-white mt-24 py-6 text-center text-sm text-gray-500">
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Kuwsh Okai. All rights reserved.
   </footer>
 
 </body>
