--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section id="contact" class="mt-24">
       <h3 class="text-3xl font-semibold mb-6">Contact</h3>
-      <p class="text-gray-700">You can reach me at: <a href="mailto:you@example.com" class="text-blue-500 underline">you@example.com</a></p>
+      <p class="text-gray-700">You can reach me at: <a href="okaikuwsh@gmail.com" class="text-blue-500 underline">okaikuwsh@gmail.com</a></p>
     </section>
   </main>
 
