--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kuwsh Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-[#EDFFD9] font-[Oswald]" >
 
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div>
