using bulma css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kuwsh Portfolio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
-<body class="bg-[#EDFFD9] font-[Oswald]" >
-
-  <header class="bg-white shadow-md sticky top-0 z-50">
-    <div>
-      <h1 class="text-xl">Kuwsh Okai</h1>
+<body>
+  <section class="section">
+    <div class="container has-text-centered">
+      <div class="container">
+        <h1 class="title has-text-success">
+          Kuwsh Portfolio
+        </h1>
+        <p class="subtitle">
+          My <strong>Programming</strong> Portfolio
+        </p>
+      </div>
     </div>
-  </header>
-
-  <main class="max-w-5xl mx-auto px-4 py-16">
-      <h2 class="text-4xl font-bold mb-4">Kuwsh Okai</h2>
-  </main>
-
+  </section>
 </body>
 </html>
