--- a/index.html
+++ b/index.html
@@ -6,7 +6,47 @@
   <title>Kuwsh Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
 </head>
-<body>
+
+<header>
+  <div class="container">
+    <nav class="navbar">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="https://google.com"></a>
+        <div class="navbar-burger" data-target="nav1">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
+      <div id="nav1" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item has-text-success" href="#">
+            Home
+          </a>
+          <a class="navbar-item" href="#">
+            Practice
+          </a>
+        </div>
+
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <p class="control">
+                <button class="button is-info">
+                  Bleh
+                </button>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<body class="has-background">
   <section class="section">
     <div class="container has-text-centered">
       <div class="container">
