--- a/index.html
+++ b/index.html
@@ -5,59 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kuwsh Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+<script src="scripts/navbar.js"></script>
+<body class="custom-background">
+  <nav class="navbar custom-nav has-text-left" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="#">
+        <strong>Kuwsh</strong>
+      </a>
 
-<header>
-  <div class="container">
-    <nav class="navbar">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="https://google.com"></a>
-        <div class="navbar-burger" data-target="nav1">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
+      <!-- Burger for mobile view -->
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
 
-      <div id="nav1" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item has-text-success" href="#">
-            Home
-          </a>
-          <a class="navbar-item" href="#">
-            Practice
-          </a>
-        </div>
-
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="field is-grouped">
-              <p class="control">
-                <button class="button is-info">
-                  Bleh
-                </button>
-              </p>
-            </div>
-          </div>
-        </div>
+    <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="#projects">
+          Projects
+        </a>
+        <a class="navbar-item" href="#about">
+          About Me
+        </a>
+        <a class="navbar-item" href="#contact">
+          Contact
+        </a>
       </div>
     </div>
   </nav>
-</header>
 
-<body class="has-background">
-  <section class="section">
-    <div class="container has-text-centered">
-      <div class="container">
-        <h1 class="title has-text-success">
-          Kuwsh Portfolio
-        </h1>
-        <p class="subtitle">
-          My <strong>Programming</strong> Portfolio
-        </p>
-      </div>
-    </div>
-  </section>
+  <div class="container has-text-centered is-uppercase typing">
+    <h1 class="custom-heading">akuwshic records</h1>
+  </div>
+
 </body>
 </html>
