updated body layout and added typing animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar custom-nav has-text-left" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="#">
-        <strong>Kuwsh</strong>
+        <strong>kuwsh</strong>
       </a>
 
       <!-- Burger for mobile view -->
@@ -29,21 +29,26 @@
     <div id="navbarMenu" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="#projects">
-          Projects
+          projects
         </a>
         <a class="navbar-item" href="#about">
-          About Me
+          about me
         </a>
         <a class="navbar-item" href="#contact">
-          Contact
+          contact
         </a>
       </div>
     </div>
   </nav>
 
-  <div class="container has-text-centered is-uppercase typing">
-    <h1 class="custom-heading">akuwshic records</h1>
-  </div>
+  <section class="hero is-fullheight is-bold">
+    <div class="hero-body has-text-centered">
+      <div class="container is-lower-case typewriter">
+        <h1 class="custom-heading">the kuwsh files.</h1>
+        <h2 class="subtitle">my development portfolio</h2>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
