minor colour changes and additional line to navburger

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
       </a>
     </div>
 
@@ -46,6 +47,7 @@
       <div class="container is-lower-case typewriter">
         <h1 class="custom-heading">the kuwsh files.</h1>
         <h2 class="subtitle">my development portfolio</h2>
+        <a href="#projects" class="button custom-button"> see my work</a>
       </div>
     </div>
   </section>
