laid out base template, ready to work on project selector

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </nav>
 
-  <section class="hero is-fullheight is-bold">
+  <section id="page-title" class="hero is-fullheight is-bold">
     <div class="hero-body has-text-centered">
       <div class="container is-lower-case typewriter">
         <h1 class="custom-heading">the kuwsh files.</h1>
@@ -52,5 +52,32 @@
     </div>
   </section>
 
+  <section id="projects" class="section">
+    <div class="container">
+      <h2 class="title">projects</h2>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <h2 class="title">about me</h2>
+      <p>lorem ipsum dolor sit amet</p>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+     <h2 class="title">contact</h2>
+     <form>
+        <div class="field">
+          <label class="label">message</label>
+          <div class="control">
+            <textarea class="textarea" placeholder="lorem ipsum dolor sit amet"></textarea>
+          </div>
+        </div>
+     </form>
+    </div>
+  </section>
+  
 </body>
 </html>
