--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css"> 
   <link rel="stylesheet" href="style.css">
 </head>
 <script src="scripts/navbar.js"></script>
@@ -55,6 +57,17 @@
   <section id="projects" class="section">
     <div class="container">
       <h2 class="title">projects</h2>
+      <div id="carousel-demo" class="carousel">
+        <div class="item-1">
+
+        </div>
+        <div class="item-2">
+
+        </div>
+        <div class="item-3">
+
+        </div>
+      </div>
     </div>
   </section>
 
@@ -78,6 +91,13 @@
      </form>
     </div>
   </section>
-  
+
+    <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
+		<script>
+		bulmaCarousel.attach('#carousel-demo', {
+			slidesToScroll: 1,
+			slidesToShow: 4
+		});
+		</script>
 </body>
 </html>
