forgot what i did icl

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <textarea class="textarea" placeholder="lorem ipsum dolor sit amet"></textarea>
           </div>
         </div>
+        <button class="custom-button">send button</button>
      </form>
     </div>
   </section>
