beginning work on project selection/preview

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <strong>kuwsh</strong>
       </a>
 
-      <!-- Burger for mobile view -->
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -55,6 +54,22 @@
   <section id="projects" class="section">
     <div class="container">
       <h2 class="title">projects</h2>
+
+      <div class="columns is-multiline">
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="images/productivity-dashboard.jpg" alt="productivity-dashboard">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p>lorem ipsum dolor sit amet</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
   </section>
 
